# synthefy-migas

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.vllm.yml  docker-compose.yml  entsoe_joined_DE_LU.csv  entsoe_prices_DE_LU.csv  pyproject.toml  run.sh  start_vllm.sh  test_mode1.json  test_mode1_haiku35.json  test_mode1_haiku45.json  test_mode1_sonnet.json  test_mode2.json
annotation_scripts/: annotate_beijing_air_vllm.py  annotate_ett_vllm.py  annotate_series_vllm.py  run_machine.sh
counterfactual_oil_copied/: counterfactual_oil.py  inference_utils.py  ttfm_scenario_sim.py  util.py
data/: nflx_sample_summary.txt  oil_scenario_sim_summary.txt  timemmd_energy_sample.csv  timemmd_energy_sample.json
docs/: deployment.md  entsoe-annotation-task.md  evaluation.md  sagemaker.md
entsoe/: .env.example  README.md  entsoe-annotation-findings.md
notebooks/: migas-1.5-backtest-and-metrics.ipynb  migas-1.5-backtest-and-metrics.py  migas-1.5-batch-inference.ipynb  migas-1.5-batch-inference.py  migas-1.5-bring-your-own-data.ipynb  migas-1.5-bring-your-own-data.py  migas-1.5-counterfactual-demo.ipynb  migas-1.5-counterfactual-demo.py  migas-1.5-counterfactual-scenarios.ipynb  migas-1.5-counterfactual-scenarios.py  migas-1.5-counterfactual-scenarios.py.py  migas-1.5-inference-quickstart.ipynb  migas-1.5-inference-quickstart.py  ttfm-backtest-and-metrics.ipynb  ttfm-batch-inference.ipynb  ttfm-bring-your-own-data.ipynb  ttfm-inference-quickstart.ipynb
scripts/: analyze_te_numeric_text_coverage.py  build_training_data.py  chronos2_multivariate_backtest.py  eval_simple.py  (+47 more)
(+189 files in other folders)
