[project]
name = "synthefy-migas"
version = "0.1.0"
description = "Migas-1.5 inference and evaluation: text-conditioned time series forecasting with pre-trained weights and baselines"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "chronos-forecasting",
    "numpy",
    "openai>=1.0.0",
    "pandas",
    "pyarrow",
    "torch",
    "tabulate",
    "tqdm",
    "sentence-transformers>=5.1.1",
    "timesfm[torch]",
    "tabpfn>=6.3.1",
    "tabpfn-time-series>=1.0.7",
    "pmdarima",
    "prophet>=1.2.2",
    "requests>=2.32.5",
    "nest-asyncio>=1.5.0",
    "huggingface-hub[cli]>=0.36.1",
    "polars>=1.38.1",
    "yfinance>=0.2",
    "anthropic>=0.84.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
]

[tool.uv.sources]
# Pin TimesFM to same git rev as training repo so TimesFM_2p5_200M_torch API is available.
# PyPI timesfm may use a different API and cause "module 'timesfm' has no attribute 'TimesFM_2p5_200M_torch'".
timesfm = { git = "https://github.com/google-research/timesfm.git", rev = "bf88c5dc88f6275b7071ebcd9051406c11435c0c" }

[project.optional-dependencies]
vllm = ["vllm>=0.11.0"]
# Toto baseline. Conflicts with vllm (transformers version mismatch).
# Install manually: uv pip install toto-ts
# toto = ["toto-ts"]

[project.scripts]
synthefy-migas = "migaseval.evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/migaseval"]

[tool.hatch.build.targets.sdist]
packages = ["src/migaseval"]
